add a few features like session expiry time mark atendance system etc

--- a/attendance/frontend/package.json
+++ b/attendance/frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.8.4",
+    "frontend": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
