--- a/attendance/frontend/package.json
+++ b/attendance/frontend/package.json
@@ -25,14 +25,18 @@
     "frontend": "file:",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-lottie-player": "^2.1.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.2",
-    "tailwindcss": "^4.0.16"
+    "tailwindcss": "^4.0.16",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
