--- a/attendance_system/attendance/frontend/package.json
+++ b/attendance_system/attendance/frontend/package.json
@@ -21,6 +21,7 @@
     "@mui/x-charts": "^8.1.0",
     "@tailwindcss/vite": "^4.0.16",
     "axios": "^1.8.4",
+    "docx": "^9.5.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.6.3",
     "frontend": "file:",
