--- a/attendance_system/attendance/frontend/package.json
+++ b/attendance_system/attendance/frontend/package.json
@@ -38,7 +38,8 @@
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.2",
     "tailwindcss": "^4.0.16",
-    "tsparticles": "^3.8.1"
+    "tsparticles": "^3.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
