--- a/attendance_system/attendance/frontend/package.json
+++ b/attendance_system/attendance/frontend/package.json
@@ -39,6 +39,7 @@
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.2",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.0.16",
     "tsparticles": "^3.8.1",
     "xlsx": "^0.18.5"
